--- a/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
+++ b/FinPlan.Web/Components/Pages/WealthJourmeyPlanner.razor
@@ -1,4 +1,4 @@
-﻿@page "/wealth-building"
+﻿@page "/wealth-building-old"
 @using System.ComponentModel.DataAnnotations
 @using FinPlan.Shared
 @using FinPlan.Shared.Enums
